tests/errors/list_method_on_graphql_object_list.dang
# Calling a list method directly on a list of GraphQL objects must surface
# a helpful error pointing at the object-selection workaround.

import Test

let result = users.length
